--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "description": "node.js adapter for MassTransit Service Bus",
   "dependencies": {
     "amqp": "0.0.2",
-    "node-uuid": "1.1.0"
+    "node-uuid": "1.1.0",
+    "vows": "0.5.8"
   },
   "engines": {
     "node": "0.4.5"
