--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "vows": "0.5.8"
   },
   "engines": {
-    "node": "0.4.5"
+    "node": "0.4.5-0.4.7"
   },
   "keywords": [
     "esb"
@@ -22,5 +22,5 @@
     "type": "git",
     "url": "git://github.com/drusellers/MassTransit.js.git"
   },
-  "version": "0.1.0"
+  "version": "0.1.1"
 }
